force-app/main/default/objects/RR_Assignment_Mapping__c/RR_Assignment_Mapping__c.object-meta.xml
<CustomObject>
    <description>added for GTMS-10121</description>
    <label>RR Assignment Mapping</label>
    <nameField>
        <displayFormat>AM-{00000}</displayFormat>
        <label>Assignment Mapping Id (Name)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RR Assignment Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>