force-app/main/default/objects/RR_Assignment_Mapping__c/fields/Assignment_Rule__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Rule__c</fullName>
    <label>Assignment Rule</label>
    <referenceTo>RR_Assignment_Rule__c</referenceTo>
    <relationshipLabel>RR Assignment Mappings</relationshipLabel>
    <relationshipName>RR_Assignment_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>