force-app/main/default/objects/RR_Assignment_Mapping__c/fields/Field_To_Assign__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Assign__c</fullName>
    <label>Field To Assign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Queue Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>