force-app/main/default/objects/RR_Assignment_Mapping__c/fields/Is_SLED__c.field-meta.xml
<CustomField>
    <fullName>Is_SLED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SLED</label>
    <type>Checkbox</type>
</CustomField>