force-app/main/default/objects/RR_Assignment_Mapping__c/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <defaultValue>999999999</defaultValue>
    <label>Max Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>