force-app/main/default/objects/RR_Assignment_Mapping__c/fields/Pause_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Pause_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pause Assignment</label>
    <type>Checkbox</type>
</CustomField>