force-app/main/default/objects/RR_Assignment_Mapping__c/fields/User_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Group__c</fullName>
    <label>User Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strat SRAE</fullName>
            </value>
            <value>
                <fullName>SRAE</fullName>
            </value>
            <value>
                <fullName>RAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>