force-app/main/default/objects/RR_Assignment_Mapping__c/fields/Value_Total__c.field-meta.xml
<CustomField>
    <fullName>Value_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Value Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>