force-app/main/default/objects/RR_Assignment_Mapping__c/validationRules/User_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Field_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(Assignment_Rule__r.Category__c)=&apos;Lane Four&apos;, User__c=null)</errorConditionFormula>
    <errorMessage>User field cannot be blank</errorMessage>
</ValidationRule>