force-app/main/default/objects/RR_Assignment_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Queue_Name__c</columns>
    <columns>NAME</columns>
    <columns>Assignment_Rule__c</columns>
    <columns>Order__c</columns>
    <columns>User__c</columns>
    <columns>User_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>